--- a/login-passageiro.html
+++ b/login-passageiro.html
@@ -11,7 +11,6 @@
 body{
   background:radial-gradient(circle at top,#ffffff,#f2f2f2);
   font-family:Inter, Arial, sans-serif;
-  color:#222;
 }
 
 .page{
@@ -55,7 +54,6 @@ input{
   padding:14px;
   border-radius:16px;
   border:1px solid #ccc;
-  font-size:1rem;
 }
 
 button{
@@ -64,12 +62,7 @@ button{
   border:none;
   background:linear-gradient(180deg,#E6C97A,#D4AF37);
   font-weight:800;
-  font-size:1rem;
   cursor:pointer;
-}
-
-button:active{
-  transform:scale(.98);
 }
 
 .error{
@@ -77,6 +70,12 @@ button:active{
   font-size:.8rem;
   text-align:center;
   display:none;
+}
+
+.info{
+  font-size:.75rem;
+  color:#666;
+  text-align:center;
 }
 </style>
 </head>
@@ -88,77 +87,70 @@ button:active{
 
     <div class="logo">
       <h1>PASSAGEIRO</h1>
-      <span>Acesso ao aplicativo</span>
+      <span>Acesso com telefone cadastrado</span>
     </div>
 
     <input
-      id="cpf"
-      placeholder="Digite seu CPF"
-      maxlength="14"
-      autocomplete="off"
+      id="telefone"
+      placeholder="Telefone com DDD"
+      autocomplete="tel"
     >
 
     <button id="btnEntrar">Entrar</button>
 
     <div class="error" id="erro">
-      Passageiro não autorizado
+      Passageiro não encontrado ou acesso bloqueado
+    </div>
+
+    <div class="info">
+      Use o mesmo telefone informado no cadastro.
     </div>
 
   </div>
 </div>
 
-<!-- SUPABASE -->
+<!-- SUPABASE GLOBAL -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="core/supabase.js"></script>
+
 <script>
-/* ================= CONFIGURAÇÃO ================= */
+/* ================= CONFIG ================= */
 
-const supabaseClient = supabase.createClient(
-  "https://msnqiiwcityikslikbow.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1zbnFpaXdjaXR5aWtzbGlrYm93Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc3MDM5OTgsImV4cCI6MjA4MzI3OTk5OH0.0KyaSuL5At4_Cfa4TOM7kvvkVYv-gmR2sb7vX6VHkaU"
-);
-
-// 🔴 GRUPO BASE – RF DRIVER
 const GRUPO_ID = "f5b2eec4-f957-4648-8e4e-f5642159dd8c";
-</script>
-
-<script>
-/* ================= AUTO-REDIRECT ================= */
-
-const usuarioLogado = JSON.parse(localStorage.getItem("usuarioRF"));
-if(usuarioLogado && usuarioLogado.tipo === "passageiro"){
-  window.location.href = "dashboard-passageiro.html";
-}
 
 /* ================= ELEMENTOS ================= */
 
-const cpfInput = document.getElementById("cpf");
+const telInput = document.getElementById("telefone");
 const btn = document.getElementById("btnEntrar");
 const erro = document.getElementById("erro");
 
-/* ================= MÁSCARA CPF ================= */
+/* ================= MÁSCARA TELEFONE ================= */
 
-cpfInput.addEventListener("input", () => {
-  let v = cpfInput.value.replace(/\D/g,"").slice(0,11);
-  v = v.replace(/(\d{3})(\d)/,"$1.$2");
-  v = v.replace(/(\d{3})(\d)/,"$1.$2");
-  v = v.replace(/(\d{3})(\d{1,2})$/,"$1-$2");
-  cpfInput.value = v;
+telInput.addEventListener("input", () => {
+  let v = telInput.value.replace(/\D/g,"").slice(0,11);
+
+  if(v.length > 10){
+    v = v.replace(/^(\d{2})(\d{5})(\d{4})$/, "($1) $2-$3");
+  }else if(v.length > 6){
+    v = v.replace(/^(\d{2})(\d{4})(\d+)/, "($1) $2-$3");
+  }else if(v.length > 2){
+    v = v.replace(/^(\d{2})(\d+)/, "($1) $2");
+  }
+
+  telInput.value = v;
 });
 
-/* ================= LOGIN PASSAGEIRO ================= */
+/* ================= LOGIN ================= */
 
 btn.addEventListener("click", loginPassageiro);
-cpfInput.addEventListener("keypress", e=>{
-  if(e.key === "Enter") loginPassageiro();
-});
 
 async function loginPassageiro(){
   erro.style.display = "none";
 
-  const cpf = cpfInput.value.replace(/\D/g,"");
+  const telefone = telInput.value.replace(/\D/g,"");
 
-  if(cpf.length !== 11){
-    erro.innerText = "CPF inválido";
+  if(telefone.length < 10){
+    erro.innerText = "Telefone inválido";
     erro.style.display = "block";
     return;
   }
@@ -166,7 +158,7 @@ async function loginPassageiro(){
   const { data, error } = await supabaseClient
     .from("usuarios")
     .select("*")
-    .eq("cpf", cpf)
+    .eq("telefone", telefone)
     .eq("tipo", "passageiro")
     .eq("ativo", true)
     .eq("grupo_id", GRUPO_ID)
@@ -177,15 +169,7 @@ async function loginPassageiro(){
     return;
   }
 
-  localStorage.setItem("usuarioRF", JSON.stringify({
-    id: data.id,
-    tipo: data.tipo,
-    nome: data.nome,
-    cpf: data.cpf,
-    telefone: data.telefone,
-    grupo_id: data.grupo_id
-  }));
-
+  localStorage.setItem("usuarioRF", JSON.stringify(data));
   window.location.href = "dashboard-passageiro.html";
 }
 </script>
