--- a/admin-painel.html
+++ b/admin-painel.html
@@ -2,94 +2,93 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Login Administrativo – RF Driver</title>
+<title>Painel Administrativo – RF Driver</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="./theme/theme.css">
 
 <style>
 body{
-  background:radial-gradient(circle at top,#ffffff,#f2f2f2);
+  background:linear-gradient(180deg,#ffffff,#f3f3f3);
   font-family:Inter, Arial, sans-serif;
-  color:#222;
 }
 
 .page{
   min-height:100vh;
   display:flex;
   justify-content:center;
-  align-items:center;
-  padding:20px;
+  padding:22px;
+}
+
+.container{
+  width:100%;
+  max-width:520px;
+  display:flex;
+  flex-direction:column;
+  gap:18px;
+}
+
+.header{
+  background:#fff;
+  padding:26px;
+  border-radius:26px;
+  box-shadow:0 10px 28px rgba(0,0,0,.12);
+  text-align:center;
+}
+
+.header h1{
+  font-size:1.6rem;
+  font-weight:900;
+  color:#000;
+}
+
+.header span{
+  font-size:.85rem;
+  color:#666;
 }
 
 .card{
   background:#fff;
+  padding:18px;
+  border-radius:22px;
+  box-shadow:0 8px 22px rgba(0,0,0,.08);
+}
+
+.card strong{
+  display:block;
+  margin-bottom:6px;
+}
+
+.btn{
   width:100%;
-  max-width:380px;
-  padding:28px 22px;
-  border-radius:26px;
-  box-shadow:0 12px 30px rgba(0,0,0,.12);
-  display:flex;
-  flex-direction:column;
-  gap:18px;
-  animation:fadeUp .6s ease;
-}
-
-@keyframes fadeUp{
-  from{opacity:0;transform:translateY(20px)}
-  to{opacity:1;transform:translateY(0)}
-}
-
-.logo{
-  text-align:center;
-}
-
-.logo h1{
-  font-size:1.6rem;
-  font-weight:900;
-  letter-spacing:2px;
-  color:#000;
-}
-
-.logo span{
-  font-size:.8rem;
-  color:#666;
-}
-
-input{
-  width:100%;
-  padding:14px;
-  border-radius:16px;
-  border:1px solid #ccc;
-  font-size:1rem;
-}
-
-button{
   padding:16px;
   border-radius:18px;
   border:none;
-  background:linear-gradient(180deg,#E6C97A,#D4AF37);
   font-size:1rem;
   font-weight:800;
-  color:#000;
   cursor:pointer;
 }
 
-button:active{
-  transform:scale(.98);
+.btn-dark{
+  background:#111;
+  color:#fff;
 }
 
-.error{
-  color:#c62828;
-  font-size:.8rem;
+.btn-gold{
+  background:linear-gradient(180deg,#E6C97A,#D4AF37);
+  color:#000;
+}
+
+.btn-outline{
+  background:#fff;
+  border:1px solid #ccc;
+}
+
+.footer{
   text-align:center;
-  display:none;
-}
-
-.info{
   font-size:.75rem;
-  color:#666;
-  text-align:center;
+  color:#777;
+  margin-top:10px;
 }
 </style>
 </head>
@@ -97,99 +96,72 @@ button:active{
 <body>
 
 <div class="page">
-  <div class="card">
+  <div class="container">
 
-    <div class="logo">
-      <h1>ADMIN</h1>
-      <span>Acesso restrito</span>
+    <!-- HEADER -->
+    <div class="header">
+      <h1>Painel Administrativo</h1>
+      <span id="nomeAdmin"></span>
     </div>
 
-    <input
-      type="text"
-      id="usuario"
-      placeholder="Usuário"
-      autocomplete="off"
-    >
+    <!-- STATUS -->
+    <div class="card">
+      <strong>Status do sistema</strong>
+      Acesso total liberado para este grupo.<br>
+      Você pode gerenciar usuários, rotas e operações.
+    </div>
 
-    <input
-      type="password"
-      id="senha"
-      placeholder="Senha"
-      autocomplete="off"
-    >
-
-    <button id="btnEntrar">
-      Entrar
+    <!-- AÇÕES -->
+    <button class="btn btn-gold" onclick="voltarDashboard()">
+      ⬅ Voltar ao Dashboard
     </button>
 
-    <div class="error" id="erro">
-      Usuário ou senha inválidos
-    </div>
+    <button class="btn btn-dark" onclick="iniciarCalculo()">
+      ▶ Iniciar cálculo de corrida
+    </button>
 
-    <div class="info">
-      Área exclusiva para administração do sistema
+    <button class="btn btn-outline" onclick="sair()">
+      🔒 Encerrar sessão
+    </button>
+
+    <div class="footer">
+      RF Driver • Administração do sistema
     </div>
 
   </div>
 </div>
 
-<!-- BASE LOCAL DE ADMINS -->
-<script src="core/admins.js"></script>
-
 <script>
-/* ================= AUTO-REDIRECT ================= */
+/* ================= PROTEÇÃO ================= */
 
-// 🔒 Admin não pode coexistir com usuarioRF
-localStorage.removeItem("usuarioRF");
+const usuario = JSON.parse(localStorage.getItem("usuarioRF"));
 
-const adminLogado = JSON.parse(localStorage.getItem("adminRF"));
+if(!usuario || usuario.tipo !== "admin"){
+  localStorage.clear();
+  window.location.href = "index.html";
+}
 
-if(adminLogado && adminLogado.tipo === "admin"){
+/* ================= UI ================= */
+
+document.getElementById("nomeAdmin").innerText =
+  `Administrador: ${usuario.nome}`;
+
+/* ================= AÇÕES ================= */
+
+function voltarDashboard(){
   window.location.href = "dashboard-admin.html";
 }
 
-/* ================= LOGIN ================= */
+function iniciarCalculo(){
+  localStorage.removeItem("origem");
+  localStorage.removeItem("destino");
+  localStorage.removeItem("valorBase");
+  window.location.href = "origem.html";
+}
 
-const usuarioInput = document.getElementById("usuario");
-const senhaInput = document.getElementById("senha");
-const erro = document.getElementById("erro");
-const btn = document.getElementById("btnEntrar");
-
-btn.addEventListener("click", loginAdmin);
-
-senhaInput.addEventListener("keypress", e=>{
-  if(e.key === "Enter") loginAdmin();
-});
-
-usuarioInput.addEventListener("keypress", e=>{
-  if(e.key === "Enter") loginAdmin();
-});
-
-function loginAdmin(){
-  erro.style.display = "none";
-
-  const usuario = usuarioInput.value.trim();
-  const senha = senhaInput.value.trim();
-
-  if(!usuario || !senha){
-    erro.innerText = "Preencha usuário e senha";
-    erro.style.display = "block";
-    return;
-  }
-
-  const admin = buscarAdmin(usuario, senha);
-
-  if(!admin){
-    erro.innerText = "Usuário ou senha inválidos";
-    erro.style.display = "block";
-    return;
-  }
-
-  // 🔒 Garante sessão exclusiva
-  localStorage.removeItem("usuarioRF");
-  localStorage.setItem("adminRF", JSON.stringify(admin));
-
-  window.location.href = "dashboard-admin.html";
+function sair(){
+  localStorage.clear();
+  window.location.href = "index.html";
 }
 </script>
 
